--- a/src/app/admin/pages/productos/modificar-productos/modificar-productos.component.html
+++ b/src/app/admin/pages/productos/modificar-productos/modificar-productos.component.html
@@ -67,6 +67,51 @@
         </div>
       </mat-form-field>
     </div>
+    <div class="form-group">
+      <mat-form-field class="full-width">
+        <mat-label>Descripción de producto</mat-label>
+        <textarea matInput formControlName="descripcion" [ngClass]="{ 'is-invalid': submitted && f.descripcion.errors }"></textarea>
+      <div *ngIf="submitted && f.descripcion.errors" class="invalid-feedback">
+          <div *ngIf="f.descripcion.errors.required">Descripción de producto requerido</div>
+      </div>
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field class="full-width">
+        <mat-label>Resumen de producto</mat-label>
+        <textarea matInput formControlName="resumen" [ngClass]="{ 'is-invalid': submitted && f.resumen.errors }"></textarea>
+      <div *ngIf="submitted && f.resumen.errors" class="invalid-feedback">
+          <div *ngIf="f.resumen.errors.required">Resumen de producto requerido</div>
+      </div>
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field class="full-width">
+        <mat-label>Descripción de utilidad</mat-label>
+        <textarea matInput formControlName="utilidad" [ngClass]="{ 'is-invalid': submitted && f.utilidad.errors }" ></textarea>
+      <div *ngIf="submitted && f.utilidad.errors" class="invalid-feedback">
+          <div *ngIf="f.utilidad.errors.required">Descripción de utilidad requerido</div>
+      </div>
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field class="full-width">
+        <mat-label>Descripción de usabilidad</mat-label>
+        <textarea matInput formControlName="usabilidad" [ngClass]="{ 'is-invalid': submitted && f.usabilidad.errors }"></textarea>
+      <div *ngIf="submitted && f.usabilidad.errors" class="invalid-feedback">
+          <div *ngIf="f.usabilidad.errors.required">Descripción de usabilidad requerido</div>
+      </div>
+      </mat-form-field>
+    </div>
+    <div class="form-group">
+      <mat-form-field class="full-width">
+        <mat-label>Ingredientes</mat-label>
+        <textarea matInput formControlName="ingredientes" [ngClass]="{ 'is-invalid': submitted && f.ingredientes.errors }"></textarea>
+      <div *ngIf="submitted && f.ingredientes.errors" class="invalid-feedback">
+          <div *ngIf="f.ingredientes.errors.required">Ingredientes requerido</div>
+      </div>
+      </mat-form-field>
+    </div>
   </form>
 
   <ng-template pTemplate="footer">
