--- a/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/src/app/pages/shop/shop-list/shop-list.component.html
@@ -31,6 +31,8 @@
                         <p>{{ producto.descripcion_resumen }}</p>
                         <h3>{{ producto.precio }}€</h3>
                         <button class="arrow-button">SHOP NOW</button>
+                        <button class="arrow-button">ADD TO CARD</button>
+
                     </div>
                 </a>
             </div>
