--- a/src/app/components/carrito/carrito-item/carrito-item.component.html
+++ b/src/app/components/carrito/carrito-item/carrito-item.component.html
@@ -1,3 +1,5 @@
 <div class="carrito-item">
-    <span>Item 1</span> x <span>4</span>: <strong>{{ 40 | currency:'EUR' }}</strong>
+    <span>{{ carritoItem.nombre }}</span> x 
+    <span>{{ carritoItem.cantidad }}</span>: 
+    <strong>{{ carritoItem.precio * carritoItem.cantidad | currency:'EUR' }}</strong>
 </div>
