--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,16 +1,16 @@
 <p-sidebar [(visible)]="mostrarCarrito" styleClass="p-sidebar-sm">
     <div class="container">
         <h1>Carrito</h1>
-        
+
         <h2 *ngIf="carritoItems.length === 0">El carrito esta vacio</h2>
 
-        <ul *ngIf="carritoItems.length < 0" class="list-group">
-            <li class="list-group-item" *ngFor="let i of [1,2,3,4,5]">
-                <app-carrito-item></app-carrito-item>
+        <ul *ngIf="carritoItems.length > 0" class="list-group">
+            <li class="list-group-item" *ngFor="let item of carritoItems">
+                <app-carrito-item [carritoItem]="item" ></app-carrito-item>
             </li>
 
             <li class="list-group-item">
-                <strong>Total: {{ 200 | currency:'EUR' }}</strong>
+                <strong>Total: {{ carritoTotal | currency:'EUR' }}</strong>
             </li>
         </ul>
     </div>
