--- a/src/app/pages/shop/producto/producto.component.html
+++ b/src/app/pages/shop/producto/producto.component.html
@@ -10,6 +10,11 @@
             <h3>{{ producto?.descripcion }}</h3>
         </div>
             <div class="container-fluid comprar-ahora">
+                <button (click)="AddAlCarrito()">
+                    <h2>Añadir a la cesta</h2>
+                </button>
+            </div>
+            <div class="container-fluid comprar-ahora">
                 <h2>Compra ahora <strong>{{producto?.precio }}</strong></h2>
             </div>
         </div>
