--- a/src/app/admin/components/header-admin/header-admin.component.html
+++ b/src/app/admin/components/header-admin/header-admin.component.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="/admin/clientes">CLIENTES</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/admin/buzon"> BUZÓN CONTACTO</a>
+            </li>
           </ul>
       </div>
       <div class="left">
