--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.arrow-button {
+  font-weight: 700;
+  outline: none;
+  padding: 3px 40px 3px 10px;
+  background-color: white;
+}
