--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -19,6 +19,7 @@ input{
     border-top: transparent;
     border-left: transparent;
     border-right: transparent;
+    width: 90%;
     
 }
 button{
@@ -42,6 +43,7 @@ display: -webkit-inline-box;
 padding-top: 5%;
 width: 62%;
 font-size: 154%;
+padding-left: initial;
     .fab{
         padding: 7px;
     }
