--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <p-sidebar [(visible)]="mostrarLogin" (onHide)="cerrarPanel.emit()" styleClass="p-sidebar-sm">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="container">
+  <form [formGroup]="loginForm"  class="container">
       <div class="form-group">
           <label for="username">Email</label>
           <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
@@ -15,13 +15,13 @@
           </div>
       </div>
       <div class="form-group">
-          <button [disabled]="loading" class="btn btn-primary">
+          <button [disabled]="loading" class="btn btn-primary" (click)="onSubmit()">
               <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
               Login
           </button>
       </div>
       <div class="form-group">
-        <button mat-raised-button color="primary">
+        <button mat-raised-button color="primary" (click)="registrarUsuario()">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Registrar
         </button>
