--- a/src/app/pages/sobre-boxsr/conocenos/conocenos.component.html
+++ b/src/app/pages/sobre-boxsr/conocenos/conocenos.component.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="container-fluid width ">
+<div class="container-fluid padding-top">
 <div class="row">
     <div class="col-12">
         
@@ -22,7 +22,7 @@
     </div>
 </div>
 </div>
-<div class="container-fluid  width">
+<div class="container-fluid  padding-top">
 <div class="row">
     <div class="col-12">
         
@@ -30,8 +30,8 @@
       <h3>La piel varía según el género, y la del hombre es un 25% más gruesa,contiene más grasa y envejece
         diferente debido principalemnte a la testosterona y necesita un enfoque personalizado.
       </h3>
-      <div class="Ellas">
-      <img class="imagenEllas" src="../../../assets/images/ellas rec..jpg" alt="">
+      <div class="col-12">
+      <img class="imagenEllas" src="../../../assets/images/_1160261.jpg" alt="">
       </div>
      
         <h4>Las fundadoras: Hella, Lara e Idoya</h4>
@@ -40,9 +40,9 @@
     </div>
 </div>
 </div>
-<div class="container-fluid width">
+<div class="container-fluid padding-bot">
 <div class="row">
-    <div  class="col-12 padding">
+    <div  class="col-12 ">
        <h1 class="black">NUESTROS VALORES</h1> 
       <h2 class="black">PRODUCTO MEDITERRANEO</h2>
       <h3>Todos nuestros productos están fabricados y envasados en nuestro laboratorio en Alicante,España.</h3>
@@ -53,7 +53,7 @@
     </div>
 </div>
 </div>
-<div class="container-fluid width ">
+<div class="container-fluid padding-bot ">
 <div class="row">
     <div  class="col-12">
        <h1 class="black">CALIDAD</h1>
