--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -46,6 +46,10 @@ a {
      padding : 0.6rem;
      margin-right: 0px;
    }
+
+   i {
+       color: black;
+   }
 }
 
 .dropdown-menu{
@@ -61,5 +65,4 @@ a {
 .dropdown-item{
     background-color: unset;
     font-weight: 70;
-    
 }
