--- a/src/app/pages/shop/producto/producto.component.scss
+++ b/src/app/pages/shop/producto/producto.component.scss
@@ -49,13 +49,33 @@
 }
 
 .description {
-    min-height: 10vh;
-    border: gray 1px solid;
+    border-top: #4b4a4a 1px solid;
+    padding-top: 10px;
 
     .description-title {
 
         h1 {
-            font-size: 40px;
+            font-size: 30px;
+            text-align: center;
         }
     }
 }
+
+.buttons-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+}
+
+button {
+    background-color: #4b4a4a;
+    color: white;
+    border: none;
+    padding: 30px 0px;
+    font-size: 16px;
+  }
+
+  .añadir-carro {
+    background-color: white;
+    color: #4b4a4a;
+  }
