--- a/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/src/app/pages/shop/shop-list/shop-list.component.html
@@ -24,7 +24,8 @@
         <ng-container *ngFor="let producto of productos">
             <div class="col-12 col-md-6 card-container">
                 <a [routerLink]="['/producto', producto.producto_id]" (click)="verProducto(producto)">
-                    <div class="container-fluid card-img" [ngStyle]="{'background-image':'url(' + producto?.imagen_url + ')'}">
+                    <div class="container-fluid card-img"
+                        [ngStyle]="{'background-image':'url(' + producto?.imagen_url + ')'}">
                     </div>
                     <div class="container-fluid card-text">
                         <h2>{{ producto.nombre }}</h2>
@@ -32,13 +33,13 @@
                         <h3>{{ producto.precio }}€</h3>
                     </div>
                 </a>
-                <div>
-                    <button class="arrow-button">COMPRAR AHORA</button>
-                    <button class="arrow-button" (click)="AddAlCarrito(producto)">AÑADIR AL CARRO</button>
+                <div class="container-fluid buttons-container">
+                    <button>COMPRAR AHORA <strong> {{producto?.precio}}€ </strong></button>
+                    <button class="añadir-carro" (click)="AddAlCarrito(producto)">AÑADIR AL CARRO</button>
                 </div>
             </div>
         </ng-container>
     </div>
 
-<!--REVIEWS COMPONENT-->
-<!--FOOTER COMPONENT-->
+    <!--REVIEWS COMPONENT-->
+    <!--FOOTER COMPONENT-->
