Cambis en productos y colecciones y creada la tabla de clientes

--- a/src/app/admin/pages/clientes/clientes.component.html
+++ b/src/app/admin/pages/clientes/clientes.component.html
@@ -1,5 +1,2 @@
 <app-header-admin></app-header-admin>
-<p>clientes works!</p>
-<p>clientes works!</p>
-<p>clientes works!</p>
-<p>clientes works!</p>
+<app-clientes-list></app-clientes-list>
