--- a/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
+++ b/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
@@ -40,7 +40,15 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
               <td mat-cell *matCellDef="let row">
                 <button (click)="modificarColeccion(row)">Modificar</button>
-                <button (click)="borrarColeccion(row.coleccion_id)">Borrar</button>
+                <button (click)="borrarColeccion(row)">
+                  <ng-container *ngIf="row.deleted === 0">
+                    Desactivar
+                  </ng-container>
+                  <ng-container *ngIf="row.deleted === 1">
+                    Activar
+                  </ng-container>
+
+                </button>
               </td>
           </ng-container>
 
