--- a/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
+++ b/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
@@ -33,7 +33,14 @@
 
             <ng-container matColumnDef="deleted">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>Activa</th>
-              <td mat-cell *matCellDef="let row"> {{row.deleted}} </td>
+              <td mat-cell *matCellDef="let row">
+                <ng-container *ngIf="row.deleted === 0">
+                  Si
+                </ng-container>
+                <ng-container *ngIf="row.deleted === 1">
+                  No
+                </ng-container>
+              </td>
           </ng-container>
 
             <ng-container matColumnDef="actions">
