--- a/src/app/admin/pages/productos/productos.component.html
+++ b/src/app/admin/pages/productos/productos.component.html
@@ -4,6 +4,6 @@
 <app-productos-list (modificar)="modificarProducto($event)" (borrar)="borrarProducto($event)"></app-productos-list>
 
 
-<app-crear-productos [display]="mostrarCrearProductos" (cerrarDialogo)="onOcultarCrearProductos()" *ngIf="mostrarCrearProductos"></app-crear-productos>
+<app-crear-productos [tipos]="tipoProducto" [display]="mostrarCrearProductos" (cerrarDialogo)="onOcultarCrearProductos()" *ngIf="mostrarCrearProductos"></app-crear-productos>
 
 <app-modificar-productos [display]="mostrarModificarProductos" [producto]="productoModificar" (cerrarDialogo)="onOcultarModificarProductos()" *ngIf="mostrarModificarProductos"></app-modificar-productos>
