campo cantidad modificado

--- a/src/app/admin/pages/pedidos/resumen-pedidos/resumen-pedidos.component.html
+++ b/src/app/admin/pages/pedidos/resumen-pedidos/resumen-pedidos.component.html
@@ -8,10 +8,6 @@
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
 
-      <!-- <ng-container matColumnDef="imagen">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Imagen</th>
-            <td mat-cell *matCellDef="let row"><img [src]="row.imagen_url" /> </td>
-          </ng-container> -->
 
       <ng-container matColumnDef="pedido_id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Pedido_id</th>
@@ -27,7 +23,7 @@
       <!-- Name Column -->
       <ng-container matColumnDef="cliente">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
-        <td mat-cell *matCellDef="let row"> {{row.nombre}} {{row.apellidos}}  </td>
+        <td mat-cell *matCellDef="let row"> {{row.nombre}} {{row.apellidos}} </td>
       </ng-container>
 
       <ng-container matColumnDef="total">
@@ -42,9 +38,9 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Preparacion</th>
         <td mat-cell *matCellDef="let row"> {{row.estado_preparacion}} </td>
       </ng-container>
-      <ng-container matColumnDef="articulos">
+      <ng-container matColumnDef="cantidad">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad articulos</th>
-        <td mat-cell *matCellDef="let row"> {{row.articulos}} </td>
+        <td mat-cell *matCellDef="let row"> {{row.cantidad}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
