stripe + token + envio datos al back

--- a/src/app/pages/checkout/payments/payments.component.html
+++ b/src/app/pages/checkout/payments/payments.component.html
@@ -1,10 +1,12 @@
-<form novalidate (ngSubmit)="createToken()" [formGroup]="stripeTest">
-  <input type="text" formControlName="name" placeholder="Jane Doe">
-  <ngx-stripe-card
-    [options]="cardOptions"
-    [elementsOptions]="elementsOptions"
-  ></ngx-stripe-card>
-  <button type="submit">
-    CREATE TOKEN
-  </button>
-</form>
+<div class="container">
+    <form novalidate (ngSubmit)="createToken(stripeForm.value)" [formGroup]="stripeForm">
+        <input type="text" formControlName="name" placeholder="Nombre">
+        <ngx-stripe-card
+          [options]="cardOptions"
+          [elementsOptions]="elementsOptions"
+        ></ngx-stripe-card>
+        <button type="submit">
+          PAGAR
+        </button>
+      </form>
+</div>
