--- a/src/app/pages/checkout/payments/payments.component.html
+++ b/src/app/pages/checkout/payments/payments.component.html
@@ -1,12 +1,9 @@
 <div class="container">
-    <form novalidate (ngSubmit)="createToken(stripeForm.value)" [formGroup]="stripeForm">
-        <input type="text" formControlName="name" placeholder="Nombre">
-        <ngx-stripe-card
-          [options]="cardOptions"
-          [elementsOptions]="elementsOptions"
-        ></ngx-stripe-card>
-        <button type="submit">
-          PAGAR
-        </button>
-      </form>
+  <form novalidate (ngSubmit)="createToken()" [formGroup]="stripeForm">
+    <input type="text" formControlName="name" placeholder="Nombre">
+    <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
+    <button type="submit">
+      PAGAR
+    </button>
+  </form>
 </div>
