checkout resumen pedido

--- a/src/app/components/carrito/carrito-item/carrito-item.component.html
+++ b/src/app/components/carrito/carrito-item/carrito-item.component.html
@@ -1,5 +1,6 @@
 <div class="carrito-item">
     <span>{{ carritoItem.nombre }}</span> x 
     <span>{{ carritoItem.cantidad }}</span>: 
-    <strong>{{ carritoItem.precio * carritoItem.cantidad | currency:'EUR' }}</strong>
+    <strong>{{ carritoItem.precio * carritoItem.cantidad | currency:'EUR' }}              </strong> <div>
+   
 </div>
