--- a/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
+++ b/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
@@ -8,6 +8,11 @@
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
 
+          <ng-container matColumnDef="imagen">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Imagen</th>
+            <td mat-cell *matCellDef="let row"><img [src]="row.imagen_url" /> </td>
+          </ng-container>
+
             <!-- ID Column -->
             <ng-container matColumnDef="nombre">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre de colección</th>
