--- a/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.scss
+++ b/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.scss
@@ -8,18 +8,22 @@
       margin-bottom: 1rem;
     }
   }
-  
+
   .mat-table {
     position: relative;
     overflow-x: auto;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.959);
+
+    img {
+      width: 40px;
+    }
   }
-  
+
   .mat-form-field-underline {
     background-color: transparent;
   }
-  
+
   .mat-form-field-flex {
     font-size: 14px;
     line-height: 1em;
@@ -45,7 +49,7 @@
     min-width: 100%;
     width: 100%;
   }
-  
+
   .mat-header-cell,
   .mat-cell {
     padding: 1rem;
