--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -15,7 +15,8 @@
                     <strong>Total: {{ carritoTotal | currency:'EUR' }}</strong>
                 </li>
             </ul>
-            <button (click)="checkOut()" (click)="abrirLogin.emit(true)" class="arrow-button">Hacer pedido</button>
+            <button (click)="checkOut()" (click)="cerrarCarrito2()"  class="arrow-button">Hacer pedido</button>
+            <!-- <button (click)="abrirLogin.emit(true)" (click)="cerrarCarrito.emit(true)"  *ngIf="this.user.length === 0">Logueate para hacer tu compra</button> -->
         </div>
     </div>
 </p-sidebar>
