--- a/src/app/admin/pages/pedidos/resumen-pedidos/resumen-pedidos.component.html
+++ b/src/app/admin/pages/pedidos/resumen-pedidos/resumen-pedidos.component.html
@@ -13,6 +13,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Pedido_id</th>
         <td mat-cell *matCellDef="let row"> {{row.pedido_id}} </td>
       </ng-container>
+      
 
       <!-- nombre Column -->
       <ng-container matColumnDef="fecha">
@@ -42,7 +43,13 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Cantidad articulos</th>
         <td mat-cell *matCellDef="let row"> {{row.cantidad}} </td>
       </ng-container>
+      <ng-container matColumnDef="ver_detalles">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ver detalle</th>
+        <td mat-cell *matCellDef="let row">
+          <button (click)="detallePedido(row)">Ver detalle</button>
+        </td>
 
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
@@ -51,7 +58,7 @@
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
     </table>
-
+    <!-- <button mat-button (click)="openDialog()">Open dialog</button> -->
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
