--- a/src/app/pages/perfil-usuario/perfil-usuario.component.html
+++ b/src/app/pages/perfil-usuario/perfil-usuario.component.html
@@ -141,7 +141,7 @@
     <div *ngIf="messageError" style="color:red">{{ messageError.error.message}}</div>
     <div class="form-group">
       <button mat-raised-button (click)="onSubmit()">
-        Registrarme
+        Modificar mi perfil
       </button>
       <!-- <button mat-raised-button (click)="guardar(formularioUsuario.value)">Crear</button> -->
     </div>
