--- a/src/app/admin/pages/pedidos/detalle-pedidos/detalle-pedidos.component.html
+++ b/src/app/admin/pages/pedidos/detalle-pedidos/detalle-pedidos.component.html
@@ -72,11 +72,6 @@
         <td mat-cell *matCellDef="let row"> {{row.nombre_producto}} </td>
       </ng-container>
 
-      <!-- <ng-container matColumnDef="suscriptor">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Suscriptor</th>
-        <td mat-cell *matCellDef="let row"> {{row.suscriptor}} </td>
-      </ng-container> -->
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
@@ -86,7 +81,7 @@
       </tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
   </div>
 
 <!-- </p-dialog> -->
