--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -1,1 +1,1 @@
-<app-shop-list [productos]="productos" (ver)="verProducto($event)"></app-shop-list>
+<app-shop-list [productos]="productos" (ver)="verProducto($event)" (verColeccion)="verColeccion($event)" [colecciones]="colecciones"></app-shop-list>
