--- a/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/src/app/pages/shop/shop-list/shop-list.component.html
@@ -39,6 +39,24 @@
                 </div>
             </div>
         </ng-container>
+        <ng-container *ngFor="let coleccion of colecciones">
+          <div class="col-12 col-md-6 card-container">
+              <a [routerLink]="['/coleccion', coleccion.coleccion_id]" (click)="onVerColeccion(coleccion)">
+                  <div class="container-fluid card-img"
+                      [ngStyle]="{'background-image':'url(' + coleccion?.imagen_url + ')'}">
+                  </div>
+                  <div class="container-fluid card-text">
+                      <h2>{{ coleccion?.nombre }}</h2>
+                      <p>{{ coleccion?.descripcion_resumen }}</p>
+                      <h3>{{ coleccion?.precio }}€</h3>
+                  </div>
+              </a>
+              <div class="container-fluid buttons-container">
+                  <button (click)="checkOut()">COMPRAR AHORA <strong> {{coleccion?.precio}}€ </strong></button>
+                  <button class="añadir-carro" (click)="AddAlCarrito(coleccion)">AÑADIR AL CARRO</button>
+              </div>
+          </div>
+      </ng-container>
     </div>
 
     <!--REVIEWS COMPONENT-->
