--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" routerLink="/shop">SHOP</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/muestras">MUESTRAS</a>
+                    <a class="nav-link" routerLink="/muestras-comprar">MUESTRAS</a>
                 </li>
                 <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toogle" href="#" id="navbarDropdown" data-toggle="dropdown" data-hover="dropdown" aria-haspopup="true" aria-expanded="false" routerLink="/conocenos">SOBRE BOXSR</a>
