--- a/src/app/pages/muestras/muestras-comprar/muestras-comprar.component.scss
+++ b/src/app/pages/muestras/muestras-comprar/muestras-comprar.component.scss
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     padding: 0px;
-    
+
 }
 
 button {
@@ -82,5 +82,9 @@ button {
   }
   .tipo{
     padding: 10px 0x;
-    background-color: transparent;
+    background-color: gainsboro;
+    width: 45%;
+    margin-left: 16px;
   }
+
+
